syntax = "proto3";

option java_package="com.catalogue.grpc.proto.code";

import "google/protobuf/timestamp.proto";

message Catalogue {
    // Unique identifier
    int64 id = 1;

    // Title of the task
    string title = 2;

    // Detail description
    string description = 3;

    // Date and time to remind
    google.protobuf.Timestamp reminder = 4;
}


message CreateRequest{
    string api = 1;

    Catalogue catalog = 2;
}

message CreateResponse{
    string api = 1;

    int64 id = 2;
}

message ReadRequest{
    string api = 1;

    int64 id = 2;
}

message ReadResponse{
    string api = 1;

    Catalogue catalog = 2;
}

message UpdateRequest{
    string api = 1;

    Catalogue catalog = 2;
}

message UpdateResponse{
    string api = 1;

    int64 updated = 2;
}

message DeleteRequest{
    string api = 1;

    int64 id = 2;
}

message DeleteResponse{
    string api = 1;

    int64 deleted = 2;
}

message ReadAllRequest{
    string api = 1;
}

message ReadAllResponse{
    string api = 1;

    repeated Catalogue catalog = 2;
}

service CatalogueService {
    rpc Create(CreateRequest) returns (CreateResponse);

    rpc Read(ReadRequest) returns (ReadResponse);

    rpc Update(UpdateRequest) returns (UpdateResponse);

    rpc Delete(DeleteRequest) returns (DeleteResponse);

    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}